# lithium-new

./: .gitignore  README.md  aarch64.txt  clean.py  lithium.iso  makeiso.py  meson.build  meson.options  x86_64.txt
iso_root/boot/: kernel.elf
iso_root/boot/limine/: limine.conf
src/: kmain.c  kmain.cpp
src/arch/aarch64/: init.c  init.cpp  linker.ld
src/arch/x86_64/: gdt.c  gdt.cpp  idt.cpp  init.cpp  isr.cpp  linker.ld
src/arch/x86_64/asm/: gdt.asm  gdtutil.asm  idt.asm  isr.asm
src/include/: kmain.hpp  limine.h
src/include/arch/x86_64/: gdt.hpp  idt.hpp
src/include/libc/: stddef.h  stdint.h  string.h
src/include/term/: flanterm.h  term.hpp
src/include/term/backends/: fb.h
src/include/types/: spinlock.h  spinlock.hpp
src/include/utils/: panic.hpp
src/libc/: string.c
src/term/: flanterm.c  term.c  term.cpp
src/term/backends/: fb.c
src/utils/: panic.cpp
